--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,10 @@
 			rel="stylesheet"
 		/>
 		<link
-			type="text/css"
 			rel="stylesheet"
-			href="css/materialize.min.css"
-			media="screen,projection"
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
 		/>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
